<resources>
    <string name="register">Register</string>
    <string name="app_name">Jaramba Mobile</string>
    <string name="image">image</string>
    <string name="petualangan_seru_dimulai_dari_sini">Petualangan seru dimulai dari sini</string>
    <string name="nikmati_kemudahan_perjalanan_n_hanya_dengan_satu_aplikasi">Nikmati kemudahan perjalanan \n hanya dengan satu aplikasi</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="login">LOGIN</string>
    <string name="lupa_password">Lupa password</string>
    <string name="mendaftar">Mendaftar</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="yang_telah_anda_daftarkan">yang telah anda daftarkan</string>
    <string name="untuk_memperoleh_konfirmasi_kata_sandi">untuk memperoleh konfirmasi kata sandi</string>
    <string name="email_anda">email anda</string>
    <string name="pada">pada</string>
    <string name="kembali_ke_halaman_login">Kembali ke halaman Login</string>
    <string name="konfirmasi_email">Konfirmasi email</string>
    <string name="secara_gratis_hingga">secara gratis hingga</string>
    <string name="kapanpun_bersama_jaramba">kapanpun bersama Jaramba</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="mendaftar_sekarang">Mendaftar sekarang</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="invalid_name">Maaf, nama tidak valid</string>
    <string name="invalid_email">Maaf, email tidak valid</string>
    <string name="invalid_password">Maaf, password kurang dari 6 karakter</string>
    <string name="invalid_number">Maaf, nomor tidak valid</string>
    <string name="silahkan_tunggu">Silahkan tunggu</string>
    <string name="title_activity_trip_user">Map</string>
    <string name="edit_profil">Ganti foto</string>
    <string name="logout">Logout</string>
    <string name="tahukah_kamu_apa_itu_jaramba">Tahukah kamu apa itu Jaramba</string>
    <string name="kamu_wajib_melihat_tayangan_ini">kamu wajib melihat tayangan ini</string>
    <string name="jaramba_desc">Jaramba adalah platform mobilitas sebagai layanan yang mengintegrasikan moda transportasi dari massal ke pribadi, dari transportasi perkotaan ke antar kota. \n\nMembuat perjalananmu mulus dan mudah tanpa harus mengikat dirimu dengan kepemilikan kendaraan pribadi dan tanggung jawab melekat padanya. \n\nJaramba yang akan kita bangun adalah pengembangan lebih lanjut dari ekosistem yang telah kami bangun. \n\n\nBagaimana menurutmu, menarik bukan?</string>
    <string name="lets_start_nyour_trip">LETS START \nYOUR TRIP</string>
    <string name="email_baru_anda">Email baru anda</string>
    <string name="tv_keterangan_ubah_nama_nomor">Masukkan kata sandi saat ini dan masukkan \nEmail baru sebagai autentikasi pengubahan \nemail anda</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="batal">Batal</string>
    <string name="mode_transportasi">Mode Transportasi :</string>
    <string name="bus_damri">BUS DAMRI</string>
    <string name="from">From :</string>
    <string name="dago">DAGO</string>
    <string name="bandung_jawa_barat">Bandung, Jawa Barat</string>
    <string name="to">To :</string>
    <string name="destinasi">TEGALEGA</string>
    <string name="kab_prov_tujuan">Bandung, Jawa Barat</string>
    <string name="tanggal">Tanggal :</string>
    <string name="hari">KAMIS</string>
    <string name="tanggal_kalender">04 - Juni - 2020</string>
    <string name="waktu">Waktu :</string>
    <string name="waktu_keberangkatan">01:41</string>
    <string name="pm_am">PM</string>
    <string name="jumlah_penumpang">Jumlah Penumpang :</string>
    <string name="keterangan_penumpang">Belum Ditambahkan</string>
    <string name="metode_pembayaran">Metode Pembayaran :</string>
    <string name="keterangan_metode_pembayaran">Belum Ditambahkan</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="tv_keterangan_ubah_password">Jaramba akan mengirimkan pesan \nmelalui email anda, kemudian anda \ndapat mengubah kata sandi \nmelalui pesan tersebut</string>
    <string name="silahkan_masukkan">Silahkan masukkan</string>
    <string name="icon_info">icon info</string>
    <string name="status_list">status</string>
    <string name="icon_bus">icon bus</string>
    <string name="your_history_trip_with">Your History Trip with</string>
    <string name="icon_rate">icon rate</string>
    <string name="pembayaran_detail">Pembayaran :</string>
    <string name="rp">Rp.</string>
    <string name="orang">Orang</string>
    <string name="start">Start :</string>
    <string name="detail_trip">Detail trip</string>
    <string name="rating_anda">Rating anda</string>
    <string name="tambahkan_komentar">Tambahkan komentar</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="rivaldo_fernandes">Rivaldo Fernandes</string>
    <string name="choose_mode_transportation">Choose Mode Transportation</string>
    <string name="ride_sharing">Ride Sharing</string>
    <string name="bus">Bus</string>
    <string name="angkot">Angkot</string>
    <string name="krl">KRL</string>
    <string name="monorail">Monorail</string>
    <string name="travel">Travel</string>
    <string name="sorry_this_feature_is_currently_in_progress">Sorry This Feature is currently in progress</string>
    <string name="start_trip">Start Trip</string>
    <string-array name="metode_pembayaran">
        <item>Cash</item>
        <item>E-Money</item>
        <item>OVO</item>
        <item>Go-Pay</item>
        <item>Link-aja</item>
    </string-array>

    <string-array name="city">
        <item>Bandung</item>
    </string-array>

    <string-array name="area">
        <item>Andir</item>
        <item>Astana Anyar</item>
        <item>Antapani</item>
        <item>Arcamanik</item>
        <item>Babakan Ciparay</item>
        <item>Bandung Kidul</item>
        <item>Bandung Kulon</item>
        <item>Bandung Wetan</item>
        <item>Batununggal</item>
        <item>Bojongloa Kaler</item>
        <item>Bojongloa Kidul</item>
        <item>Buahbatu</item>
        <item>Cibeunying Kaler</item>
        <item>Cibeunying Kidul</item>
        <item>Cibiru</item>
        <item>Cicendo</item>
        <item>Cidadap</item>
        <item>Cinambo</item>
        <item>Coblong</item>
        <item>Gedebage</item>
        <item>Kiaracondong</item>
        <item>Lengkong</item>
        <item>Mandalajati</item>
        <item>Panyileukan</item>
        <item>Rancasari</item>
        <item>Regol</item>
        <item>Sukajadi</item>
        <item>Sukasari</item>
        <item>Sumur Bandung</item>
        <item>Ujungberung</item>
    </string-array>
</resources>