<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingBottom="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/jaramba_logo_04"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/petualangan_seru_dimulai_dari_sini"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:text="@string/nikmati_kemudahan_perjalanan_n_hanya_dengan_satu_aplikasi" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_email"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:autofillHints="no"
        android:inputType="textEmailAddress"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kata_sandi"
            android:background="@drawable/rounded_et"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:autofillHints="no"
            android:inputType="textPassword"
            android:layout_marginBottom="25dp"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:onClick="lupaPassword"
        android:layout_marginBottom="40dp"
        tools:ignore="OnClick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_memiliki_akun"
            android:textSize="17sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mendaftar"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:onClick="mendaftar"
            android:padding="10dp"
            tools:ignore="OnClick" />

    </LinearLayout>










</LinearLayout>