<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingBottom="20dp"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPsswordPage">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/jaramba_logo_04"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/masukkan_email"
            android:fontFamily="@font/nunito_sans"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/yang_telah_anda_daftarkan"
            android:fontFamily="@font/nunito_sans"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/untuk_memperoleh_konfirmasi_kata_sandi"
        android:fontFamily="@font/nunito_sans"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/pada"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/email_anda"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="@font/nunito_sans"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_email_konfirmasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/masukkan_email"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:autofillHints="no"
        android:inputType="textEmailAddress"/>




    <Button
        android:id="@+id/btn_konfirmasi_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/konfirmasi_email"
        android:fontFamily="@font/nunito_sans"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_btn"
        android:onClick="forgotPassword"
        tools:ignore="OnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="backToLogin"
        android:padding="10dp"
        android:text="@string/kembali_ke_halaman_login"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />


</LinearLayout>