<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/jaramba_logo_04"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_keterangan_ubahnamanomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/tv_keterangan_ubah_nama_nomor"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_validatepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:fontFamily="@font/nunitosans_regular"
            android:layout_marginBottom="16dp"
            android:hint="@string/kata_sandi"
            android:autofillHints="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_ubahemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:fontFamily="@font/nunitosans_regular"
            android:layout_marginBottom="16dp"
            android:hint="@string/email_baru_anda"
            android:autofillHints="no"
            android:inputType="textEmailAddress" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_dismiss_email"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:textAlignment="center"
                android:fontFamily="@font/nunitosans_regular"
                android:padding="10dp"
                android:text="@string/batal"
                android:layout_marginEnd="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_conf_email"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:layout_toEndOf="@+id/btn_dismiss_email"
                android:textAlignment="center"
                android:fontFamily="@font/nunitosans_regular"
                android:padding="10dp"
                android:text="@string/konfirmasi"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>