<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppsActivity"
    android:background="@color/colorPrimary"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@android:color/white"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/judul_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tahukah_kamu_apa_itu_jaramba"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="27dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="5sp"
                android:text="@string/kamu_wajib_melihat_tayangan_ini" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"

                android:text="@string/jaramba_desc" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/logo_white"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/jaramba_logo_04"
                    android:contentDescription="@string/image" />

            </RelativeLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>







</ScrollView>