<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/jaramba_logo_04"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_keterangan_ubahnamanomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Silahkan masukkan "
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_ubahnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/nama_lengkap"
            android:autofillHints="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_ubahnomor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/nomor_telepon"
            android:autofillHints="no"
            android:inputType="number" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_dismiss_ubah"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:textAlignment="center"
                android:padding="10dp"
                android:text="Batal"
                android:layout_marginEnd="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_ubah"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:layout_toEndOf="@+id/btn_dismiss_ubah"
                android:textAlignment="center"
                android:padding="10dp"
                android:text="Konfirmasi"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>





    </LinearLayout>

</LinearLayout>